website/versioned_docs/version-2.0.0-alpha.12/web.globaljsoncontainerstorage.md
---
id: version-2.0.0-alpha.12-web.globaljsoncontainerstorage
title: GlobalJSONContainerStorage class
hide_title: true
original_id: web.globaljsoncontainerstorage
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## GlobalJSONContainerStorage class


<b>Signature:</b>

```typescript
export declare class GlobalJSONContainerStorage implements ContainerStorage 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(driver)](./web.globaljsoncontainerstorage._constructor_.md) |  | Constructs a new instance of the <code>GlobalJSONContainerStorage</code> class |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [delAccessToken(namespace)](./web.globaljsoncontainerstorage.delaccesstoken.md) |  |  |
|  [delAuthenticationSession(namespace)](./web.globaljsoncontainerstorage.delauthenticationsession.md) |  |  |
|  [delIdentity(namespace)](./web.globaljsoncontainerstorage.delidentity.md) |  |  |
|  [delMFABearerToken(namespace)](./web.globaljsoncontainerstorage.delmfabearertoken.md) |  |  |
|  [delOAuthRedirectAction(namespace)](./web.globaljsoncontainerstorage.deloauthredirectaction.md) |  |  |
|  [delRefreshToken(namespace)](./web.globaljsoncontainerstorage.delrefreshtoken.md) |  |  |
|  [delSessionID(namespace)](./web.globaljsoncontainerstorage.delsessionid.md) |  |  |
|  [delUser(namespace)](./web.globaljsoncontainerstorage.deluser.md) |  |  |
|  [getAccessToken(namespace)](./web.globaljsoncontainerstorage.getaccesstoken.md) |  |  |
|  [getAuthenticationSession(namespace)](./web.globaljsoncontainerstorage.getauthenticationsession.md) |  |  |
|  [getExtraSessionInfoOptions(namespace)](./web.globaljsoncontainerstorage.getextrasessioninfooptions.md) |  |  |
|  [getIdentity(namespace)](./web.globaljsoncontainerstorage.getidentity.md) |  |  |
|  [getMFABearerToken(namespace)](./web.globaljsoncontainerstorage.getmfabearertoken.md) |  |  |
|  [getOAuthRedirectAction(namespace)](./web.globaljsoncontainerstorage.getoauthredirectaction.md) |  |  |
|  [getRefreshToken(namespace)](./web.globaljsoncontainerstorage.getrefreshtoken.md) |  |  |
|  [getSessionID(namespace)](./web.globaljsoncontainerstorage.getsessionid.md) |  |  |
|  [getUser(namespace)](./web.globaljsoncontainerstorage.getuser.md) |  |  |
|  [setAccessToken(namespace, accessToken)](./web.globaljsoncontainerstorage.setaccesstoken.md) |  |  |
|  [setAuthenticationSession(namespace, authenticationSession)](./web.globaljsoncontainerstorage.setauthenticationsession.md) |  |  |
|  [setExtraSessionInfoOptions(namespace, options)](./web.globaljsoncontainerstorage.setextrasessioninfooptions.md) |  |  |
|  [setIdentity(namespace, identity)](./web.globaljsoncontainerstorage.setidentity.md) |  |  |
|  [setMFABearerToken(namespace, mfaBearerToken)](./web.globaljsoncontainerstorage.setmfabearertoken.md) |  |  |
|  [setOAuthRedirectAction(namespace, oauthRedirectAction)](./web.globaljsoncontainerstorage.setoauthredirectaction.md) |  |  |
|  [setRefreshToken(namespace, refreshToken)](./web.globaljsoncontainerstorage.setrefreshtoken.md) |  |  |
|  [setSessionID(namespace, sessionID)](./web.globaljsoncontainerstorage.setsessionid.md) |  |  |
|  [setUser(namespace, user)](./web.globaljsoncontainerstorage.setuser.md) |  |  |

